implanter-menu-and-tracker-implanter-and-hidden-desc-fix

--- a/Resources/Prototypes/Entities/Clothing/Hands/gloves.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/gloves.yml
@@ -237,9 +237,8 @@
   - type: HiddenDescription
     entries:
     - label: corvax-hidden-desc-ThievingGloves-thief
-      whitelistMind:
-        components:
-          - ThiefRole
+      whitelistMindRoles:
+      - ThiefRole
 # Corvax-HiddenDesc-End
   - type: NinjaGloves
     abilities:
@@ -390,14 +389,12 @@
   - type: HiddenDescription
     entries:
     - label: corvax-hidden-desc-ThievingGloves-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: corvax-hidden-desc-ThievingGloves-thief
-      whitelistMind:
-        components:
-          - ThiefRole
+      whitelistMindRoles:
+      - ThiefRole
 # Corvax-HiddenDesc-End
 
 - type: entity
