--- a/Resources/Prototypes/Entities/Objects/Shields/shields.yml
+++ b/Resources/Prototypes/Entities/Objects/Shields/shields.yml
@@ -485,10 +485,9 @@
     - type: HiddenDescription
       entries:
       - label: corvax-hidden-desc-EnergyShield-syndicate
-        whitelistMind:
-          components:
-            - TraitorRole
-            - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       - label: corvax-hidden-desc-EnergyShield-security
         jobRequired:
           - HeadOfSecurity
@@ -518,10 +517,9 @@
     - type: HiddenDescription
       entries:
       - label: corvax-hidden-desc-EnergyShield-syndicate
-        whitelistMind:
-          components:
-            - TraitorRole
-            - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       - label: corvax-hidden-desc-EnergyShield-security
         jobRequired:
           - HeadOfSecurity
