--- a/Resources/Prototypes/Entities/Objects/Weapons/Bombs/spider.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Bombs/spider.yml
@@ -49,9 +49,8 @@
   - type: HiddenDescription
     entries:
     - label: corvax-hidden-desc-SpiderCharge-ninja
-      whitelistMind:
-        components:
-          - NinjaRole
+      whitelistMindRoles:
+      - NinjaRole
     - label: corvax-hidden-desc-SpiderCharge-research
       jobRequired:
         - ResearchAssistant
