--- a/Resources/Prototypes/SS220/Entities/Clothing/Eyes/glasses.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Eyes/glasses.yml
@@ -120,10 +120,9 @@
     - type: HiddenDescription
       entries:
       - label: hidden-desc-ThermalGoogles-syndicate
-        whitelistMind:
-          components:
-            - TraitorRole
-            - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       - label: hidden-desc-ThermalGoogles-research
         jobRequired:
           - ResearchAssistant
