--- a/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/specific.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/specific.yml
@@ -23,10 +23,9 @@
   - type: HiddenDescription
     entries:
     - label: hidden-desc-toy-armour-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: hidden-desc-toy-armour-clown
       jobRequired:
         - Clown
