--- a/Resources/Prototypes/SS220/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Fun/toys.yml
@@ -92,10 +92,9 @@
   - type: HiddenDescription
     entries:
     - label: hidden-desc-toy-weapons-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: hidden-desc-toy-weapons-clown
       jobRequired:
         - Clown
@@ -350,10 +349,9 @@
     - type: HiddenDescription
       entries:
       - label: hidden-desc-toy-weapons-syndicate
-        whitelistMind:
-          components:
-            - TraitorRole
-            - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
 
 #katana for some reason
 - type: entity
