--- a/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
+++ b/Resources/Prototypes/Entities/Objects/Consumable/Food/produce.yml
@@ -1879,10 +1879,9 @@
   - type: HiddenDescription
     entries:
     - label: corvax-hidden-desc-Gatfruit-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: corvax-hidden-desc-Gatfruit-botanist
       jobRequired:
         - Botanist
