--- a/Resources/Prototypes/Entities/Objects/Misc/subdermal_implants.yml
+++ b/Resources/Prototypes/Entities/Objects/Misc/subdermal_implants.yml
@@ -48,10 +48,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-SadTromboneImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       # hidden-desc-end
 
 - type: entity
@@ -92,10 +91,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-LightImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 - type: entity
@@ -133,10 +131,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-BikeHornImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       # hidden-desc-end
 
 #Security implants
@@ -189,10 +186,9 @@
         - Detective
         - BlueShield
       - label: corvax-hidden-desc-TrackingImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       # hidden-desc-end
 #Traitor implants
 
@@ -239,10 +235,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-StorageImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 - type: entity
@@ -274,10 +269,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-FreedomImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 - type: entity
@@ -291,6 +285,27 @@
   - type: RadioImplant
     radioChannels:
     - Syndicate
+    # hidden-desc-begin
+  - type: HiddenDescription
+    entries:
+    - label: corvax-hidden-desc-IllegalImplants-medical
+      jobRequired:
+      - Paramedic
+      - MedicalDoctor
+      - SeniorPhysician
+      - Brigmedic
+      - ChiefMedicalOfficer
+    - label: corvax-hidden-desc-RadioImplant-research
+      jobRequired:
+      - ResearchAssistant
+      - ResearchDirector
+      - Scientist
+      - Borg
+    - label: corvax-hidden-desc-RadioImplant-syndicate
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
+    # hidden-desc-end
 
 - type: entity
   parent: [ BaseSubdermalImplant, StorePresetUplink ]
@@ -328,10 +343,9 @@
       - Scientist
       - Borg
     - label: corvax-hidden-desc-UplinkImplanter-syndicate
-      whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
   # hidden-desc-end
 
 - type: entity
@@ -365,10 +379,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-EmpImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 - type: entity
@@ -399,10 +412,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-ScramImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 - type: entity
@@ -434,10 +446,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-DnaScramblerImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-begin
 
 #Nuclear Operative/Special Exclusive implants
@@ -487,10 +498,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-MicroBombImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 - type: entity
@@ -544,10 +554,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-MacroBombImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 - type: entity
@@ -590,10 +599,9 @@
       - Scientist
       - Borg
     - label: corvax-hidden-desc-DeathAcidifierImplanter-syndicate
-      whitelistMind:
-        mindRoles:
-        - TraitorRole
-        - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
   # hidden-desc-end
 
 - type: entity
@@ -630,10 +638,9 @@
         - Scientist
         - Borg
       - label: corvax-hidden-desc-DeathRattleImplanter-syndicate
-        whitelistMind:
-          mindRoles:
-          - TraitorRole
-          - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 - type: entity
@@ -646,6 +653,27 @@
       - type: SubdermalImplant
         implantAction: FakeMindShieldToggleAction
       - type: FakeMindShieldImplant
+    # hidden-desc-begin
+      - type: HiddenDescription
+        entries:
+        - label: corvax-hidden-desc-IllegalImplants-medical
+          jobRequired:
+          - Paramedic
+          - MedicalDoctor
+          - SeniorPhysician
+          - Brigmedic
+          - ChiefMedicalOfficer
+        - label: corvax-hidden-desc-FakeMindShieldImplant-research
+          jobRequired:
+          - ResearchAssistant
+          - ResearchDirector
+          - Scientist
+          - Borg
+        - label: corvax-hidden-desc-FakeMindShieldImplant-syndicate
+          whitelistMindRoles:
+          - TraitorRole
+          - NukeOperative
+    # hidden-desc-end
 
 # Sec and Command implants
 
@@ -684,10 +712,9 @@
         - Detective
         - BlueShield
      - label: corvax-hidden-desc-MindShieldImplanter-syndicate
-       whitelistMind:
-        mindRoles:
-         - TraitorRole
-         - NukeOperative
+       whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
     # hidden-desc-end
 
 # Centcomm implants
