--- a/Resources/Prototypes/Entities/Objects/Power/powersink.yml
+++ b/Resources/Prototypes/Entities/Objects/Power/powersink.yml
@@ -51,10 +51,9 @@
     - type: HiddenDescription
       entries:
       - label: corvax-hidden-desc-PowerSink-syndicate
-        whitelistMind:
-          components:
-            - TraitorRole
-            - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       - label: corvax-hidden-desc-PowerSink-engineering
         jobRequired:
           - ChiefEngineer
