--- a/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Medical/hypospray.yml
@@ -699,10 +699,9 @@
   - type: HiddenDescription
     entries:
     - label: corvax-hidden-desc-Hypopen-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: corvax-hidden-desc-Hypopen-research
       jobRequired:
         - ResearchAssistant
