--- a/Resources/Prototypes/Entities/Objects/Specific/syndicate.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/syndicate.yml
@@ -26,10 +26,9 @@
   - type: HiddenDescription
     entries:
     - label: corvax-hidden-desc-Telecrystal-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: corvax-hidden-desc-Telecrystal-cargo
       jobRequired:
         - SalvageSpecialist
