--- a/Resources/Prototypes/Entities/Objects/Tools/emag.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/emag.yml
@@ -16,10 +16,9 @@
   - type: HiddenDescription
     entries:
     - label: corvax-hidden-desc-Emag-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: corvax-hidden-desc-Emag-research
       jobRequired:
         - ResearchAssistant
