--- a/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Throwable/grenades.yml
@@ -407,10 +407,9 @@
   - type: HiddenDescription
     entries:
     - label: corvax-hidden-desc-HolyHandGrenade-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: corvax-hidden-desc-HolyHandGrenade-research
       jobRequired:
         - ResearchAssistant
@@ -519,10 +518,9 @@
   - type: HiddenDescription
     entries:
       - label: hidden-desc-toy-weapons-explosive-syndicate
-        whitelistMind:
-          components:
-            - TraitorRole
-            - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       - label: hidden-desc-toy-weapons-explosive-clown
         jobRequired:
           - Clown
