--- a/Resources/Prototypes/SS220/Entities/Clothing/Shoes/specific.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Shoes/specific.yml
@@ -268,10 +268,9 @@
   - type: HiddenDescription
     entries:
     - label: hidden-desc-SilentShoes-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: hidden-desc-SilentShoes-research
       jobRequired:
         - ResearchAssistant
@@ -279,10 +278,9 @@
         - Scientist
         - Borg
     - label: corvax-hidden-desc-Chameleon-syndicate
-      whitelistMind:
-        components:
-          - TraitorRole
-          - NukeOperative
+      whitelistMindRoles:
+      - TraitorRole
+      - NukeOperative
     - label: corvax-hidden-desc-Chameleon-research
       jobRequired:
         - ResearchAssistant
