--- a/Resources/Prototypes/SS220/Entities/Objects/Specific/Robotics/borg_modules.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/Specific/Robotics/borg_modules.yml
@@ -51,10 +51,9 @@
     - type: HiddenDescription
       entries:
       - label: hidden-desc-flaming-axe-module-syndicate
-        whitelistMind:
-          components:
-            - TraitorRole
-            - NukeOperative
+        whitelistMindRoles:
+        - TraitorRole
+        - NukeOperative
       - label: hidden-desc-flaming-axe-module-research
         jobRequired:
           - ResearchAssistant
