--- a/Resources/Prototypes/SS220/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/SS220/Loadouts/loadout_groups.yml
@@ -494,6 +494,11 @@
   - Glasses
   - CyberMedVisor
   - CMOCorpGlasses
+  - MedicalHud
+  - MedicalEyePatchHud
+  - Glasses
+  - GlassesJamjar
+  - GlassesJensen
 #! Медицинский отдел (Конец)
 
 #! Инженерный отдел (Начало)
