--- a/Resources/Prototypes/Entities/Objects/Tools/tools.yml
+++ b/Resources/Prototypes/Entities/Objects/Tools/tools.yml
@@ -540,6 +540,10 @@
     quickEquip: false
     slots:
     - Belt
+  # SS220 rolling pin damage and sound tweaks begin
+  - type: StaminaDamageOnHit
+    damage: 16
+  # SS220 rolling pin damage and sound tweaks end
   - type: MeleeWeapon
     soundHit: !type:SoundCollectionSpecifier # SS220 Sounds
       collection: BatonHit
@@ -547,7 +551,6 @@
     damage:
       types:
         Blunt: 7
-        Stamina: 16
   - type: Tool
     qualities:
     - Rolling
@@ -561,9 +564,10 @@
     graph: WoodenRollingPin
     node: rollingpin
 # SS220 Throwable Changes begin
+  - type: StaminaDamageOnCollide
+    damage: 13.5
   - type: DamageOtherOnHit
     damage:
       types:
         Blunt: 5.5
-        Stamina: 13.5
 # SS220 Throwable Changes end
