--- a/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/Guns/Projectiles/projectiles.yml
@@ -213,11 +213,14 @@
           - BulletImpassable
       fly-by: *flybyfixture
   - type: Ammo
+  # SS220 Stamina damage begin
+  - type: StaminaDamageOnCollide
+    damage: 55
+  # SS220 Stamina damage end
   - type: Projectile
     damage:
       types:
         Heat: 5
-        Stamina: 55
     soundHit:
       path: "/Audio/Weapons/Guns/Hits/taser_hit.ogg"
     forceSound: true
@@ -257,16 +260,13 @@
         - BulletImpassable
       fly-by: *flybyfixture
   - type: Ammo
-  # SS220 Stamina damage begin
-  #- type: StaminaDamageOnCollide
-  #  damage: 33
-  # SS220 Stamina damage end
+  - type: StaminaDamageOnCollide
+    damage: 30 # SS220 Stamina damage
   - type: Projectile
     impactEffect: BulletImpactEffectDisabler
     damage:
       types:
         Heat: 0
-        Stamina: 30 # SS220 Stamina damage
     soundHit:
       collection: WeakHit
     forceSound: true
@@ -300,12 +300,13 @@
         - BulletImpassable
       fly-by: *flybyfixture
   - type: Ammo
+  - type: StaminaDamageOnCollide
+    damage: 1
   - type: Projectile
     impactEffect: BulletImpactEffectDisabler
     damage:
       types:
         Heat: 0
-        Stamina: 1 # SS220 Stamina-Damage-Type
     soundHit:
       collection: WeakHit
     forceSound: true
@@ -758,9 +759,10 @@
     damage:
       types:
         Blunt: 1
-        Stamina: 80
     soundHit:
       path: /Audio/Effects/gen_hit.ogg
+  - type: StaminaDamageOnCollide
+    damage: 80
 
 - type: entity
   id: BulletGrenadeBlast
@@ -1031,14 +1033,13 @@
         - BulletImpassable
       fly-by: *flybyfixture
   - type: Ammo
-  #- type: StaminaDamageOnCollide SS220-FIX
-  #  damage: 15 SS220-FIX
+  - type: StaminaDamageOnCollide
+    damage: 20 # SS220-BUFF
   - type: Projectile
     impactEffect: BulletImpactEffectDisabler
     damage:
       types:
         Heat: 0
-        Stamina: 20 # SS220-BUFF
     soundHit:
       collection: WeakHit
     forceSound: true
