--- a/Resources/Prototypes/Entities/Objects/Weapons/security.yml
+++ b/Resources/Prototypes/Entities/Objects/Weapons/security.yml
@@ -42,7 +42,6 @@
     activatedDamage:
       types:
         Blunt: 0
-        Stamina: 55
 #SS220-Stunbatom-rework end
   - type: MeleeWeapon
     wideAnimationRotation: -135
@@ -53,10 +52,10 @@
     angle: 60
     animation: WeaponArcThrust
   - type: StaminaDamageOnHit
-    damage: 0
+    damage: 55 #SS220-Stunbatom-rework
     sound: /Audio/Weapons/egloves.ogg
   - type: StaminaDamageOnCollide
-    damage: 0
+    damage: 55 #SS220-Stunbatom-rework
     sound: /Audio/Weapons/egloves.ogg
     # SS220-Stunbaton-rework throwing angles
   - type: Ensnaring # SS220 stunbaton pacifism fix
@@ -80,13 +79,6 @@
     damage:
       types:
         Blunt: 7
-        # Stamina: 55 #ss220 stunbaton fix
-  #ss220 stunbaton fix start
-  - type: ItemToggleDamageOtherOnHit
-    activatedDamage:
-      types:
-        Stamina: 55
-  #ss220 stunbaton fix end
   - type: LandAtCursor # it deals stamina damage when thrown
   - type: Battery
     maxCharge: 1000
