--- a/Resources/Prototypes/SS220/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/SS220/Entities/Mobs/NPCs/animals.yml
@@ -57,7 +57,8 @@
     damage:
       types:
         Slash: 7
-        Stamina: 22
+  - type: StaminaDamageOnHit
+    damage: 22
   - type: SlowOnDamage
     speedModifierThresholds:
       40: 0.70
