--- a/Resources/Prototypes/SS220/Shitspawn/Debugging/debugKnife.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/Debugging/debugKnife.yml
@@ -161,10 +161,9 @@
   id: KnifeStamina
   categories: [ HideSpawnMenu ]
   components:
+  - type: StaminaDamageOnHit
+    damage: 100
   - type: MeleeWeapon
-    damage:
-      types:
-        Stamina: 100
 
 - type: entity
   parent: ClothingBackpackERTSecurity
