--- a/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/hardsuit_helmets_base.yml
+++ b/Resources/Prototypes/SS220/Shitspawn/FractWarEbent/hardsuit_helmets_base.yml
@@ -18,6 +18,8 @@
   - type: TemperatureProtection
     heatingCoefficient: 0.005
     coolingCoefficient: 0.005
+  - type: StaminaResistance
+    damageCoefficient: 1
   - type: Armor
     modifiers:
       coefficients:
@@ -27,7 +29,6 @@
         Heat: 1
         Radiation: 1
         Caustic: 1
-        Stamina: 1
 
 # Iron
 - type: entity
