--- a/Resources/Prototypes/SS220/cane.yml
+++ b/Resources/Prototypes/SS220/cane.yml
@@ -15,8 +15,11 @@
       types:
         Blunt: 7
   - type: Wieldable
+  - type: ComponentsOnWield
+    components:
+    - type: StaminaDamageOnHit
+      damage:  14
   - type: IncreaseDamageOnWield
     damage:
       types:
         Blunt: -7
-        Stamina: 14
