--- a/Resources/Prototypes/Entities/Clothing/Hands/gloves.yml
+++ b/Resources/Prototypes/Entities/Clothing/Hands/gloves.yml
@@ -8,13 +8,15 @@
     sprite: Clothing/Hands/Gloves/Boxing/boxingred.rsi
   - type: Clothing
     sprite: Clothing/Hands/Gloves/Boxing/boxingred.rsi
+  - type: StaminaDamageOnHit
+    damage: 8 #Stam damage values seem a bit higher than regular damage because of the decay, etc
+    # This needs to be moved to boxinggloves
     #knockdownSound: /Audio/Weapons/boxingbell.ogg
   - type: MeleeWeapon
     attackRate: 1.5
     damage:
       types:
         Blunt: 0.4
-        Stamina: 8
     soundHit:
       collection: BoxingHit
     animation: WeaponArcFist
@@ -81,12 +83,13 @@
   id: ClothingHandsGlovesBoxingRigged
   suffix: Rigged
   components:
+  - type: StaminaDamageOnHit
+    damage: 30
   - type: MeleeWeapon
     attackRate: 1.4
     damage:
       types:
         Blunt: 8
-        Stamina: 25 # SS220 Stamina-Armor
     bluntStaminaDamageFactor: 0.0 # so blunt doesn't deal stamina damage at all
     mustBeEquippedToUse: true
 
