--- a/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
+++ b/Resources/Prototypes/Entities/Clothing/OuterClothing/armor.yml
@@ -136,12 +136,11 @@
         Piercing: 0.35
         Heat: 0.35
         Caustic: 0.5
-        Stamina: 0.3 #SS220 stamina resist fix
         Radiation: 0.85 #ss220 raid suit rework
   - type: ExplosionResistance
     damageCoefficient: 0.35
-  #- type: StaminaResistance
-  #  damageCoefficient: 0.45
+  - type: StaminaResistance
+    damageCoefficient: 0.3 #SS220 stamina resist fix
   - type: ClothingSpeedModifier
     walkModifier: 1 #ss220 raid suit rework
     sprintModifier: 0.95 #ss220 raid suit rework
