--- a/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
+++ b/Resources/Prototypes/Entities/Mobs/NPCs/animals.yml
@@ -1231,13 +1231,15 @@
       collection: FootstepBounce
   - type: Puller
     needsHands: false
+  - type: StaminaDamageOnHit
+    damage: 8 #Stam damage values seem a bit higher than regular damage because of the decay, etc
+    # This needs to be moved to boxinggloves
     #knockdownSound: /Audio/Weapons/boxingbell.ogg
   - type: MeleeWeapon
     attackRate: 1.5
     damage:
       types:
         Blunt: 0.4
-        Stamina: 8
     soundHit:
       collection: BoxingHit
     animation: WeaponArcFist
@@ -1951,6 +1953,11 @@
       amount: 1
     - id: SheetUranium1
       amount: 1
+  # SS220 Add stamina resistence begin
+  - type: StaminaResistance
+    damageCoefficient: 0.5
+    worn: false
+  # SS220 Add stamina resistence end
   - type: Damageable
     damageContainer: Biological
     damageModifierSet: Zombie
