--- a/Resources/Prototypes/Entities/Objects/Fun/toys.yml
+++ b/Resources/Prototypes/Entities/Objects/Fun/toys.yml
@@ -1687,6 +1687,8 @@
       damageBonus:
           types:
               Blunt: 1000
+    - type: StaminaDamageOnHit
+      damage: 8
     - type: Item
       size: Small
       sprite: Objects/Fun/rubber_hammer.rsi
@@ -1708,7 +1710,6 @@
       damage:
         types:
           Blunt: 0
-          Stamina: 8
 
 - type: entity
   parent: BaseItem
