--- a/Resources/Prototypes/SS220/Entities/Clothing/CultYogg/CultYoggSuits.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/CultYogg/CultYoggSuits.yml
@@ -25,7 +25,8 @@
         Heat: 0.4
         Radiation: 0.4
         Caustic: 0.1
-        Stamina: 0.35
+  - type: StaminaResistance
+    damageCoefficient: 0.35
   - type: ClothingSpeedModifier
     walkModifier: 0.9
     sprintModifier: 0.9
