--- a/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/hardsuits.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/OuterClothing/hardsuits.yml
@@ -25,7 +25,8 @@
         Heat: 0.8
         Radiation: 0.25
         Caustic: 0.6
-        Stamina: 0.35 #SS220-syndifix
+  - type: StaminaResistance
+    damageCoefficient: 0.35
   - type: ExplosionResistance
     damageCoefficient: 0.6
   - type: ZombificationResistance
@@ -58,7 +59,8 @@
         Heat: 0.8
         Radiation: 0.4
         Caustic: 0.6
-        Stamina: 0.35
+  - type: StaminaResistance
+    damageCoefficient: 0.35
   - type: ExplosionResistance
     damageCoefficient: 0.6
   - type: ZombificationResistance
@@ -91,7 +93,8 @@
         Heat: 0.6
         Radiation: 0.2
         Caustic: 0.4
-        Stamina: 0.35
+  - type: StaminaResistance
+    damageCoefficient: 0.35
   - type: ZombificationResistance
     zombificationResistanceCoefficient: 0.35
   - type: ExplosionResistance
@@ -124,7 +127,8 @@
         Heat: 0.7
         Caustic: 0.7
         Radiation: 0.50
-        Stamina: 0.4
+  - type: StaminaResistance
+    damageCoefficient: 0.4
   - type: ClothingSpeedModifier
     walkModifier: 0.80
     sprintModifier: 0.80
@@ -159,8 +163,9 @@
         Piercing: 0.2
         Heat: 0.2
         Radiation: 0.1
-        Stamina: 0.1
         Caustic: 0.1
+  - type: StaminaResistance
+    damageCoefficient: 0.1
   - type: ClothingSpeedModifier
     walkModifier: 1
     sprintModifier: 1.1
@@ -210,8 +215,9 @@
         Piercing: 0.3
         Heat: 0.3
         Radiation: 0.1
-        Stamina: 0.1
         Caustic: 0.1
+  - type: StaminaResistance
+    damageCoefficient: 0.1
   - type: ZombificationResistance
     zombificationResistanceCoefficient: 0
   - type: ClothingSpeedModifier
@@ -264,7 +270,8 @@
         Heat: 0.4
         Radiation: 0.025
         Caustic: 0.7
-        Stamina: 0.5
+  - type: StaminaResistance
+    damageCoefficient: 0.5
   - type: ClothingSpeedModifier
     walkModifier: 0.7
     sprintModifier: 0.75
@@ -305,7 +312,8 @@
         Heat: 0.4
         Radiation: 0.2
         Caustic: 0.4
-        Stamina: 0.2
+  - type: StaminaResistance
+    damageCoefficient: 0.2
   - type: ZombificationResistance
     zombificationResistanceCoefficient: 0.25
   - type: ClothingSpeedModifier
