--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/actions.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/actions.yml
@@ -94,10 +94,10 @@
           Cold: -4
           Shock: -4
           Radiation: -1
-          Stamina: -5
           Сerebral: -10
         groups:
           Airloss: -5
+      modifyStamina: -5
       bloodlossModifier: -1
       modifyBloodLevel: 2
     itemIconStyle: NoItem
