add ignore resistance

--- a/Resources/Prototypes/SS220/Entities/Structures/Shuttles/shuttle_gun220.yml
+++ b/Resources/Prototypes/SS220/Entities/Structures/Shuttles/shuttle_gun220.yml
@@ -321,6 +321,7 @@
     lifetime: 4
   - type: StaminaDamageOnCollide
     damage: 50
+    ignoreResistance: true
   - type: Projectile
     damage:
       types:
