--- a/Resources/Prototypes/Loadouts/role_loadouts.yml
+++ b/Resources/Prototypes/Loadouts/role_loadouts.yml
@@ -476,7 +476,7 @@
   - ChiefMedicalOfficerOuterClothing
   - ChiefMedicalOfficerNeck
   - ChiefMedicalOfficerShoes
-  - MedicalEyewear
+#  - MedicalEyewear #SS220 Fix Duplicate Loadout
 #  - Glasses #SS220-TwoOne-Floppa-Iteration
   - SurvivalMedical
   - Trinkets
@@ -488,7 +488,6 @@
   groups:
   - GroupTankHarness
   - MedicalDoctorHead
-  - MedicalGlasses #SS220-Two Floppa Iteration
   - MedicalNeck #SS220-WhiteScarf
   - MedicalMask
   - MedicalDoctorJumpsuit
@@ -498,7 +497,6 @@
   - MedicalShoes
   - MedicalDoctorPDA
   - MedicalEyewear
-#  - Glasses #SS220-Two Floppa Iteration
   - SurvivalMedical
   - Trinkets
   - GroupSpeciesBreathToolMedical
@@ -540,7 +538,6 @@
   - ParamedicHead
   - MedicalNeck #SS220-WhiteScarf
   - MedicalMask
-  - MedicalGlasses #SS220-TwoOne-Floppa-Iteration
   - ParamedicJumpsuit
   - MedicalGloves
   - MedicalBackpack
@@ -548,7 +545,6 @@
   - ParamedicShoes
   - MedicalEyewear
   - ParamedicBelt #ss220 ParamedInterdyne
-#  - Glasses #SS220-TwoOne-Floppa-Iteration
   - SurvivalMedical
   - Trinkets
   - GroupSpeciesBreathToolMedical
