--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/lantern.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/lantern.yml
@@ -43,6 +43,7 @@
     enabled: false
     radius: 3
     energy: 2
+    netsync: false
   #- type: AutoRecharge
   #  rechargeDuration: 120
   - type: ToggleableLightVisuals
