--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/lantern.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/lantern.yml
@@ -2,29 +2,19 @@
 
 - type: entity
   name: cult lantern
-  #parent: [BaseItem, CultYoggRestrictedItem]
-  #parent: [BaseItem, Lantern]
   parent: BaseItem
-  id: LanternFlashCultYogg
+  id: CultYoggLantern
   suffix: CultYogg
   description: description
   components:
   - type: Sprite
     sprite: SS220/Objects/CultYogg/lantern_cult.rsi
     layers:
-      - state: lantern_off
+      - state: lantern
       - state: lantern_on
         shader: unshaded
         visible: false
         map: [ "light" ]
-  #- type: Sprite
-  #  sprite: SS220/Objects/CultYogg/lantern_cult.rsi
-  #  layers:
-  #  - state: lantern_off
-  #    map: [ "base" ]
-    #- state: lantern_on
-    #  shader: unshaded
-    #  map: [ "light" ]
   - type: Clothing
     sprite: SS220/Objects/CultYogg/lantern_cult.rsi
     equippedPrefix: off
@@ -35,17 +25,11 @@
     heldPrefix: off
   - type: CultYoggLamp
     addPrefix: true
-  #- type: HandheldLight
-  #  addPrefix: true
-  #  blinkingBehaviourId: blinking
-  #  radiatingBehaviourId: radiating
   - type: PointLight
     enabled: false
     radius: 3
     energy: 2
     netsync: false
-  #- type: AutoRecharge
-  #  rechargeDuration: 120
   - type: ToggleableLightVisuals
   - type: Appearance
   - type: Physics
