container check + recipe

--- a/Resources/Prototypes/SS220/Entities/Objects/CultYogg/corruption.yml
+++ b/Resources/Prototypes/SS220/Entities/Objects/CultYogg/corruption.yml
@@ -141,6 +141,13 @@
   corruptionReverseEffect: ExorcismUncorruptEffect
 
 - type: corrupted
+  id: LanternFlashCultYoggLantern
+  from:
+    prototypeId: LanternFlash
+  result: CultYoggLantern
+  corruptionReverseEffect: ExorcismUncorruptEffect
+
+- type: corrupted
   id: BaseLampFlashCultYogg
   from:
     parentPrototypeId: BaseLamp
