--- a/Resources/Prototypes/Entities/Objects/Specific/Salvage/ore_bag.yml
+++ b/Resources/Prototypes/Entities/Objects/Specific/Salvage/ore_bag.yml
@@ -5,7 +5,7 @@
   description: A robust bag for salvage specialists and miners alike to carry large amounts of ore. Magnetises any nearby ores when attached to a belt.
   components:
   #ss220 add transfer items in storage start
-  - type: TransferItemsInStorage
+  - type: TransferMaterialsInStorage
   #ss220 add transfer items in storage end
   - type: MagnetPickup
   - type: Sprite
