--- a/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/makeshiftstunprod.yml
+++ b/Resources/Prototypes/Recipes/Crafting/Graphs/improvised/makeshiftstunprod.yml
@@ -8,11 +8,13 @@
           steps:
             - material: MetalRod
               amount: 1
+            #ss220 change stunprod start
             #- tag: PowerCellSmall
               #name: power cell small
               #icon:
                 #sprite: Objects/Power/power_cells.rsi
                 #state: small
+            #ss220 change stunprod end
             - tag: Handcuffs
               icon:
                 sprite: Objects/Misc/cablecuffs.rsi
