+ new sounds + ExplosionProbability

--- a/Resources/Audio/SS220/Announcements/attributions.yml
+++ b/Resources/Audio/SS220/Announcements/attributions.yml
@@ -8,3 +8,8 @@
   license: "Custom"
   copyright: "Remix created by SkaldetSkaeg for SS220"
   source: "https://github.com/space-wizards/space-station-14/blob/master/Resources/Audio/Items/Toys/rubber_chicken_3.ogg"
+
+- files: ["pepsilon.ogg"]
+  license: "Custom"
+  copyright: "Remix created by SkaldetSkaeg for SS220"
+  source: ["https://www.myinstants.com/en/instant/idris-elba-cough-95302/", "https://www.myinstants.com/en/instant/pepsimannn-15847/"]
