--- a/Resources/Audio/SS220/Announcements/attributions.yml
+++ b/Resources/Audio/SS220/Announcements/attributions.yml
@@ -12,4 +12,4 @@
 - files: ["pepsilon.ogg"]
   license: "Custom"
   copyright: "Remix created by SkaldetSkaeg for SS220"
-  source: ["https://www.myinstants.com/en/instant/idris-elba-cough-95302/", "https://www.myinstants.com/en/instant/pepsimannn-15847/"]
+  source: "https://www.myinstants.com/en/instant/idris-elba-cough-95302/"
