--- a/Resources/Prototypes/SS220/Entities/Clothing/Uniforms/Jumpsuit/jumpsuits.yml
+++ b/Resources/Prototypes/SS220/Entities/Clothing/Uniforms/Jumpsuit/jumpsuits.yml
@@ -758,3 +758,14 @@
     sprite: SS220/Clothing/Uniforms/Jumpsuit/ussp_uniform.rsi
   - type: Clothing
     sprite: SS220/Clothing/Uniforms/Jumpsuit/ussp_uniform.rsi
+
+- type: entity
+  parent: UnsensoredClothingUniformBase
+  id: ClothingUniformJumpsuitWizard
+  name: uniform wizard
+  description: A wizard's uniform, but you don't feel anything magical about it...
+  components:
+  - type: Sprite
+    sprite: SS220/Clothing/Uniforms/Jumpsuit/wizard.rsi
+  - type: Clothing
+    sprite: SS220/Clothing/Uniforms/Jumpsuit/wizard.rsi
